Closed Bug 2020953 Opened 1 month ago Closed 1 month ago

Tolerate %VERSION% as a CKEditor 4 version number in the compatibility hack

Categories

(Core :: DOM: Navigation, defect)

defect

Tracking

()

RESOLVED FIXED
150 Branch
Tracking Status
firefox-esr140 --- unaffected
firefox148 --- fixed
firefox149 --- fixed
firefox150 --- fixed

People

(Reporter: hsivonen, Assigned: hsivonen)

References

(Regression)

Details

(Keywords: regression)

Attachments

(4 files, 4 obsolete files)

Bug 2002481 added a compat hack for CKEditor 4. For the hack to activate, window.CKEDITOR.version must exist and must start with "4.".

In bug 2020668 comment 15, a case of CKEditor 4 without the build step that would replace %VERSION% with a version number has been reported.

We should tolerate %VERSION% as the version number (or drop the additional check beyond a magic class name).

Assignee: nobody → hsivonen
Status: NEW → ASSIGNED
Pushed by hsivonen@mozilla.com: https://github.com/mozilla-firefox/firefox/commit/a4fa43777529 https://hg.mozilla.org/integration/autoland/rev/8d698cfef09e Tolerate %VERSION% as a CKEditor 4 version number in the compatibility hack. r=vhilla
Keywords: regression
Regressed by: sync-about-blank

Set release status flags based on info from the regressing bug 543435

Status: ASSIGNED → RESOLVED
Closed: 1 month ago
Resolution: --- → FIXED
Target Milestone: --- → 150 Branch

The patch landed in nightly and beta is affected.
:hsivonen, is this bug important enough to require an uplift?

For more information, please visit BugBot documentation.

Flags: needinfo?(hsivonen)

:hsivonen, to add to Comment 5, could you also consider a release uplift request?

Attached file Manual test (obsolete) —
Attached file Actual manual test
Attachment #9550945 - Attachment is obsolete: true
Flags: needinfo?(hsivonen)
Attachment #9550952 - Flags: approval-mozilla-beta?

firefox-beta Uplift Approval Request

  • User impact if declined: CKEditor 4 that has been deployed without the upstream-intended build step does not work in Firefox.

Also, bug 2020927 is on top of this one, and uplifting that one is more important.

  • Code covered by automated testing: yes
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: Load the attachment named "Actual manual test" and observe in the console in dev tools that there is a warning "Altered iframe load event timing for compatibility with CKEditor 4’s browser detection" and there is a log line "EVENT".
  • Risk associated with taking this patch: low
  • Explanation of risk level: I have manually tested that properly-deployed CKEditor 4 (which needs the compat hack) and CKEditor 5 (which doesn't need the compat hack) work after this. I have reasoned from a properly-deployed CKEditor 5 demo that it uses different globals, so this is not supposed to break improperly-deployed CKEditor 5, either.
  • String changes made/needed: None.
  • Is Android affected?: yes
Attachment #9550953 - Flags: approval-mozilla-release?

firefox-release Uplift Approval Request

  • User impact if declined: CKEditor 4 that has been deployed without the upstream-intended build step does not work in Firefox.

Also, bug 2020927 is on top of this one, and uplifting that one is more important.

  • Code covered by automated testing: yes
  • Fix verified in Nightly: yes
  • Needs manual QE test: no
  • Steps to reproduce for manual QE testing: Load the attachment named "Actual manual test" and observe in the console in dev tools that there is a warning "Altered iframe load event timing for compatibility with CKEditor 4’s browser detection" and there is a log line "EVENT".
  • Risk associated with taking this patch: low
  • Explanation of risk level: I have manually tested that properly-deployed CKEditor 4 (which needs the compat hack) and CKEditor 5 (which doesn't need the compat hack) work after this. I have reasoned from a properly-deployed CKEditor 5 demo that it uses different globals, so this is not supposed to break improperly-deployed CKEditor 5, either.
  • String changes made/needed: None.
  • Is Android affected?: yes
Attachment #9550961 - Flags: approval-mozilla-release?
Attachment #9550968 - Flags: approval-mozilla-beta?
Attachment #9550970 - Flags: approval-mozilla-release?
Attachment #9550961 - Attachment is obsolete: true
Attachment #9550961 - Flags: approval-mozilla-release?

The duplicate uplift requests are due to requesting uplift here first and then the uplifts requests in bug 2020927 depending on this change.

Attachment #9550953 - Attachment is obsolete: true
Attachment #9550953 - Flags: approval-mozilla-release?
Attachment #9550952 - Attachment is obsolete: true
Attachment #9550952 - Flags: approval-mozilla-beta?
Attachment #9550970 - Flags: approval-mozilla-release? → approval-mozilla-release+
Attachment #9550968 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
QA Whiteboard: [qa-triage-done-c150/b149]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: