Bug 2020953 - Tolerate %VERSION% as a CKEditor 4 version number in the compatibility hack. r=vhilla

Differential Revision: https://phabricator.services.mozilla.com/D285982